# ForenseCTL

./: .env.example  .gitignore  Makefile  README.md  demo_completo_interactivo.py  demo_pdf_docx_alternativo.py  docker-compose.yml  prompt.json  pyproject.toml  real_system_analyzer.py  setup.py  test_analisis_completo.py  test_reporte_completo.py
ForenseCTL_Distribution/: README.md  install.bat
ForenseCTL_Linux_Distribution/: LICENSE  README.md  VERSION_INFO.txt  forensectl_linux.py  install_linux.sh  quick_start.sh  requirements.txt
ForenseCTL_Linux_Distribution/docs/: QUICK_INSTALL.md
ForenseCTL_Linux_Distribution/examples/: system_check.py
forensectl/: __init__.py  cli.py  interactive_menu.py
forensectl/analysis/: __init__.py  artifact_extractor.py  disk_analyzer.py  memory_analyzer.py  timeline_builder.py  yara_scanner.py
forensectl/cli/: README.md  __init__.py  config_example.yaml  main.py
forensectl/cli/commands/: __init__.py  acquire_cmd.py  analyze_cmd.py  chain_cmd.py  report_cmd.py  retention_cmd.py  timeline_cmd.py  verify_cmd.py  workflow_cmd.py  yara_cmd.py
forensectl/core/: __init__.py  case_manager.py  chain_of_custody.py  evidence.py  integrity.py  manifest.py
forensectl/reports/: __init__.py  export_manager.py  report_generator.py  template_manager.py
templates/: executive_report_en.html  executive_report_es.html  technical_report_en.html  technical_report_en.md  technical_report_es.html  technical_report_es.md
test_analisis_completo/: analisis_completo_test_20250813_153346.json  analisis_completo_test_20250813_153421.json
test_reporte_completo/: analisis_completo_reporte_20250813_153855.json  analisis_completo_reporte_20250813_153934.json  analisis_completo_reporte_20250813_154003.json  analisis_completo_reporte_20250813_154026.json  analisis_completo_reporte_20250813_154057.json  analisis_completo_reporte_20250813_154555.json  analisis_completo_reporte_20250813_154623.json  analisis_completo_reporte_20250813_154658.json
